// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    formData={
      Object {
        "key": "",
        "personalAccessToken": "",
        "url": "",
      }
    }
    help={true}
    id="name"
    isTextArea={false}
    maxLength={40}
    onFieldChange={[MockFunction]}
    propKey="key"
  />
  <AlmDefinitionFormField
    formData={
      Object {
        "key": "",
        "personalAccessToken": "",
        "url": "",
      }
    }
    help={false}
    id="url.bitbucket"
    isTextArea={false}
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
  />
  <AlmDefinitionFormField
    formData={
      Object {
        "key": "",
        "personalAccessToken": "",
        "url": "",
      }
    }
    help={false}
    id="personal_access_token"
    isTextArea={true}
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="personalAccessToken"
  />
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    formData={
      Object {
        "key": "key",
        "personalAccessToken": "asdf1234",
        "url": "http://bbs.enterprise.com",
      }
    }
    help={true}
    id="name"
    isTextArea={false}
    maxLength={40}
    onFieldChange={[MockFunction]}
    propKey="key"
  />
  <AlmDefinitionFormField
    formData={
      Object {
        "key": "key",
        "personalAccessToken": "asdf1234",
        "url": "http://bbs.enterprise.com",
      }
    }
    help={false}
    id="url.bitbucket"
    isTextArea={false}
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
  />
  <AlmDefinitionFormField
    formData={
      Object {
        "key": "key",
        "personalAccessToken": "asdf1234",
        "url": "http://bbs.enterprise.com",
      }
    }
    help={false}
    id="personal_access_token"
    isTextArea={true}
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="personalAccessToken"
  />
</Fragment>
`;
